# keycloak_examples

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.example  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  release.yml
src/keycloak_examples/: __init__.py
src/pycloak/: __init__.py  client.py  endpoints.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_admin.py  test_client.py  test_endpoints.py  test_exceptions.py  test_models.py
